# adbc-efgh

./: .gitignore  Cargo.toml  README.md  tmp.csv
src/: duckdb.rs  main.rs
