[package]
name = "adbc-efgh"
version = "0.1.0"
edition = "2024"

[dependencies]
# for ADBC
adbc_core = { version = "0.17.0", features = ["driver_manager"] }
arrow-ipc = "54.3.1"
bytes = "1.10.1"

# for HTTP/3
http = "1"
rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "ring",
    "std",
] }

# for HTTP/2
hyper = { version = "1.6.0", features = ["http2", "server"] }

# for asnyc handling
tokio = { version = "1.44", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "time",
    "tracing-log",
] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.11", features = ["http2", "server", "tokio"] }
tokio-rustls = { version = "0.26.2", default-features = false }

serde = { version = "1.0.219", features = ["derive"] }
